Fix image positioning and sizing, clean positioned sass, adjust topic and forum list margin, update other things

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_cp.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_cp.scss
@@ -639,6 +639,7 @@
 
 .section-ucp-manage-groups .cp-main fieldset dd {
 	span[style*='background-color'] {
+		border-radius: 3px;
 		@include sizing(16px, 16px);
 		display: block;
 		@include position($type: relative, $top: -1px);
