--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
@@ -423,7 +423,7 @@ fieldset.polls dl .poll_option_select, #preview fieldset.polls dl dd {
 			margin: 0;
 		}
 		&.post-ignore {
-			padding: 0 0 20px 0px;
+			padding: 0 0 20px 0;
 			.postbody {
 				display: none;
 			}
