--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_base.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_base.scss
@@ -18,6 +18,7 @@ body {
 	-webkit-tap-highlight-color: rgba($color-01, 0);
 	backface-visibility: hidden;
 	background: url($images + 'background.png') 0 0 repeat;
+	background-attachment: fixed;
 }
 
 img {
