--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
@@ -136,7 +136,7 @@
 		}
 		&.row dl dd {
 			&.topics, &.posts, &.views {
-				margin-top: 5px;
+				margin-top: 10px;
 			}
 		}
 	}
@@ -165,13 +165,6 @@
 		}
 	}
 
-	// profile.scss
-	.postprofile dt.has-avatar .avatar-container {
-		a.avatar, div.avatar {
-			@include sizing(155px, 155px);
-		}
-	}
-
 	// other-sections.scss
 	#viewprofile .profile-panel .inner .postprofile {
 		flex: 0 0 176px;
@@ -191,8 +184,8 @@
 			max-width: 72%;
 		}
 	}
-	.excerpt .excerpt-image .image-wrap {
-		@include sizing(150px, 150px);
+	.excerpt .excerpt-image {
+		flex: 0 0 150px;
 	}
 
 	// cp.scss
@@ -259,8 +252,7 @@
 		}
 	}
 	#notification_list {
-		left: 1.5px;
-		right: auto;
+		@include position($left: 1.5px, $right: auto);
 	}
 }
 
@@ -311,7 +303,7 @@
 			dl[class*='forum'] dd.lastpost {
 				order: 2;
 				@include flex;
-				margin: 5px 0 0 0;
+				margin: 10px 0 0 0;
 				dfn {
 					position: static;
 				}
@@ -323,8 +315,7 @@
 	}
 	.styled-listing .topiclist > li.row {
 		&:first-child dl:not([class*='forum']) dd.lastpost:before {
-			left: auto;
-			right: 0;
+			@include position($left: auto, $right: 0);
 		}
 		dl[class*='forum'] dd.lastpost {
 			margin-left: auto;
@@ -368,8 +359,7 @@
 			.jumpbox {
 				text-align: left;
 				&.dropdown-visible .dropdown {
-					left: 0;
-					right: auto;
+					@include position($left: 0, $right: auto);
 				}
 			}
 		}
@@ -516,7 +506,7 @@
 			}
 			&.row dl {
 				dt .responsive-show, dd.mark {
-					margin-top: 5px;
+					margin-top: 10px;
 				}
 			}
 			&.row dl dt {
@@ -538,7 +528,7 @@
 			}
 			&.row dl {
 				dd.redirect, &:not([class*='forum']) dd.lastpost {
-					margin-top: 5px;
+					margin-top: 10px;
 				}
 				dd {
 					&.lastpost, &.redirect {
@@ -554,15 +544,11 @@
 					dt {
 						padding-top: 120px;
 						.forum-image {
-							top: -20px;
-							left: -10px;
-							right: -10px;
-							z-index: 1;
+							@include position($top: -20px, $left: -10px, $right: -10px, $z: 1);
 							@include sizing(auto, 120px);
 							border-radius: 0;
 							border: 0;
 							background-position: center bottom;
-							margin: 0;
 							img {
 								display: none;
 							}
@@ -608,7 +594,7 @@
 		}
 		td {
 			padding: 0;
-			margin-top: 5px;
+			margin-top: 10px;
 			&:first-child {
 				padding-left: 0;
 				margin-top: 0;
@@ -641,6 +627,9 @@
 			float: none;
 			text-align: left;
 			padding-right: 5px;
+			&:after {
+				content: ',';
+			}
 		}
 		&:not(.show-header) {
 			tbody tr {
@@ -698,8 +687,7 @@
 		.postbody {
 			position: static;
 			.post-buttons {
-				top: 20px;
-				right: 20px;
+				@include position($top: 20px, $right: 20px);
 			}
 		}
 	}
@@ -754,10 +742,8 @@
 			&.has-avatar {
 				.avatar-container {
 					float: left;
+					width: 130px;
 					margin-right: 20px;
-					a.avatar, div.avatar {
-						@include sizing(130px, 130px);
-					}
 				}
 				& ~ dd {
 					margin-left: 150px;
@@ -783,8 +769,7 @@
 	.popup-wrap {
 		padding: 20px;
 		.page-body > a[onclick*='window.close'] {
-			top: 20px;
-			right: 20px;
+			@include position($top: 20px, $right: 20px);
 		}
 	}
 	.section-viewonline {
@@ -817,11 +802,12 @@
 			margin: 0 0 20px 0;
 		}
 		.excerpt-image .image-wrap {
-			border-radius: 0;
-			@include sizing(auto, 150px);
+			height: 150px;
 			background-position: center top;
+			border-radius: 0;
 			border-width: 2px;
 			box-shadow: none;
+			padding-bottom: 0;
 			img {
 				display: none;
 			}
@@ -941,8 +927,7 @@
 		.left-box, .right-box {
 			width: 50%;
 			.icon {
-				top: 4px;
-				bottom: auto;
+				@include position($top: 4px, $bottom: auto);
 			}
 		}
 		.right-box {
@@ -958,16 +943,14 @@
 			@include reset-font-size('&:before, select');
 			&:before {
 				content: 'Move to folder:';
-				left: 0;
-				bottom: 10px;
+				@include position($left: 0, $bottom: 10px);
 			}
 			select {
 				width: 100%;
 			}
 		}
 		.button2 {
-			right: 0;
-			bottom: 0;
+			@include position($right: 0, $bottom: 0);
 			width: 60px;
 		}
 		&:not(.clearfix) {
@@ -1094,8 +1077,8 @@
 			}
 		}
 		.user-profile {
-			.user-avatar .image-wrap {
-				@include sizing(125px, 125px);
+			.user-avatar {
+				max-width: 125px;
 			}
 			h5 {
 				font-size: rem(35px);
@@ -1122,8 +1105,7 @@
 	#notification_list {
 		width: auto !important;
 		min-width: 0;
-		top: 35px;
-		right: 1.5px;
+		@include position($top: 35px, $right: 1.5px);
 	}
 	#featured-content {
 		display: none;
@@ -1202,9 +1184,7 @@
 			}
 			&.dropdown-visible {
 				.dropdown {
-					left: 5px;
-					right: 5px;
-					top: auto;
+					@include position($top: auto, $left: 5px, $right: 5px);
 					margin-top: 10px !important;
 				}
 				&.dropdown-up {
@@ -1315,8 +1295,7 @@
 		}
 	}
 	fieldset.polls dl .poll_option_select, #preview fieldset.polls dl dd {
-		left: auto;
-		right: 0;
+		@include position($left: auto, $right: 0);
 		&:before {
 			content: 'Vote: \0000A0';
 		}
@@ -1343,9 +1322,10 @@
 	// profile.scss
 	.postprofile dt.has-avatar {
 		.avatar-container {
-			a.avatar, div.avatar {
-				@include sizing(80px, 80px);
+			width: 80px;
+			& > .avatar {
 				border-width: 2px;
+				padding-bottom: calc(100% - 4px);
 			}
 		}
 		& ~ dd {
@@ -1355,15 +1335,14 @@
 	#viewprofile .stats .stat-bar {
 		max-width: none;
 	}
-	.post.online .postprofile dt.has-avatar .avatar-container {
-		margin-top: 40px;
+	.online .postprofile dt.has-avatar .avatar-container {
+		margin-top: 35px;
 	}
 
 	// other-sections.scss
 	#search_memberlist .dropdown-container .dropdown.live-search[style*='block'] {
 		min-width: 1px;
-		left: -1px;
-		right: -1px;
+		@include position($left: -1px, $right: -1px);
 	}
 	.section-search form[data-focus='keywords'] fieldset dl dd #sk {
 		@include flex(full);
@@ -1458,13 +1437,10 @@
 		margin: auto;
 	}
 	.scroll-to-top {
-		bottom: 20px;
-		left: 50px;
-		right: 0;
+		@include position($bottom: 20px, $left: 50px, $right: 0);
 	}
 	.scroll-to-bottom {
-		left: 0;
-		right: 50px;
+		@include position($left: 0, $right: 50px);
 	}
 }
 
@@ -1545,7 +1521,7 @@
 	$responsive-icon-size: $list-icon-size - 8px;
 	.topiclist > li.row dl {
 		dt[style*='images/icons'] {
-			background-position: 64px 1px;
+			background-position: 56px 1px;
 		}
 		&.row-item dt:before, dt .row-item-link {
 			@include sizing($responsive-icon-size, $responsive-icon-size);
@@ -1588,10 +1564,7 @@
 		padding-right: 0;
 		padding-bottom: 20px;
 		.right-box {
-			top: auto;
-			right: auto;
-			left: 0;
-			bottom: 0;
+			@include position($top: auto, $bottom: 0, $left: 0, $right: auto);
 		}
 	}
 
@@ -1694,10 +1667,7 @@
 			position: relative;
 			padding: 0 0 30px 0;
 			.right-box {
-				top: auto;
-				right: auto;
-				left: 0;
-				bottom: 3px;
+				@include position($top: auto, $bottom: 3px, $left: 0, $right: auto);
 			}
 		}
 		fieldset dl dt input[value='Previous'] {
@@ -1831,7 +1801,7 @@
 			&.has-avatar {
 				.avatar-container {
 					float: none;
-					margin-right: 0;
+					margin: 0 auto;
 				}
 				& ~ dd {
 					margin-left: 0;
@@ -1839,7 +1809,7 @@
 			}
 		}
 	}
-	.post.online .postprofile dt.has-avatar .avatar-container {
+	.online .postprofile dt.has-avatar .avatar-container {
 		margin-top: 0;
 	}
 
