--- a/khyeras/styles/khyeras_v1/template/overall_header.html
+++ b/khyeras/styles/khyeras_v1/template/overall_header.html
@@ -160,7 +160,7 @@
 		<!-- EVENT overall_header_page_body_before -->
 
 		<section id="page-body" class="page-body<!-- IF SCRIPT_NAME == 'index' or SCRIPT_NAME == 'viewforum' or SCRIPT_NAME == 'viewtopic' or SCRIPT_NAME == 'search' --> styled-listing<!-- ELSE--> simple-listing<!-- ENDIF-->" role="main">
-			<div class="wrapper">
+			<div class="wrapper<!-- IF SCRIPT_NAME == 'app/setting-map' --> full-wrapper<!-- ENDIF -->">
 				<a id="start_here" class="anchor"></a>
 				<!-- IF S_BOARD_DISABLED and S_USER_LOGGED_IN and (U_MCP or U_ACP) -->
 					<div id="information" class="rules">
