--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_other-sections.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_other-sections.scss
@@ -248,6 +248,55 @@ dl.faq + .top {
 			@include flex(base);
 		}
 	}
+	&.key-grid {
+		@include clearfix('&');
+		margin: 0 -10px 10px -10px;
+		li {
+			float: left;
+			width: 20%;
+			padding: 0 10px;
+			&:last-child {
+				margin-bottom: 10px;
+			}
+			&:nth-child(5n+1) {
+				clear: left;
+			}
+		}
+	}
+}
+
+.banner {
+	margin: 0 0 20px 0;
+	border: 2px solid $color-04;
+	position: relative;
+	&.banner-aligned {
+		border: 0;
+		border-bottom: 1px solid $color-04;
+		margin: -20px -20px 20px -20px;
+	}
+	.banner-content {
+		background: rgba($color-02, 0.60);
+		padding: 20px;
+		@include position($type: absolute, $bottom: 0, $left: 0, $right: 0);
+		.main-title, .sub-title {
+			@include ellipsis;
+		}
+		.main-title {
+			margin: 0;
+		}
+		.sub-title {
+			margin: 10px 0 0 0;
+			font-style: italic;
+			font-size: rem(16px);
+		}
+	}
+	& ~ dl.details {
+		dt, dd {
+			&.sub-title {
+				display: none;
+			}
+		}
+	}
 }
 
 /* Pages - Excerpts
@@ -289,43 +338,12 @@ dl.faq + .top {
 	}
 }
 
-.banner {
-	margin: 0 0 20px 0;
-	border: 2px solid $color-04;
-	position: relative;
-	&.banner-aligned {
-		border: 0;
-		border-bottom: 1px solid $color-04;
-		margin: -20px -20px 20px -20px;
-	}
-	.banner-content {
-		background: rgba($color-02, 0.60);
-		padding: 20px;
-		@include position($type: absolute, $bottom: 0, $left: 0, $right: 0);
-		.main-title, .sub-title {
-			@include ellipsis;
-		}
-		.main-title {
-			margin: 0;
-		}
-		.sub-title {
-			margin: 10px 0 0 0;
-			font-style: italic;
-			font-size: rem(16px);
-		}
-	}
-	& ~ dl.details {
-		dt, dd {
-			&.sub-title {
-				display: none;
-			}
-		}
-	}
-}
+/* Pages - Map
+========================================================================== */
 
 .map {
 	position: relative;
-	margin: 0 0 20px 0;
+	margin: 0 -20px 20px -20px;
 	.tab-panel {
 		position: absolute;
 	}
