--- a/khyeras/styles/khyeras_v1/template/memberlist_view.html
+++ b/khyeras/styles/khyeras_v1/template/memberlist_view.html
@@ -203,7 +203,7 @@
 							<dd>{PROFILE_C_WEIGHT_VALUE}</dd>
 						<!-- ENDIF -->
 					</dl>
-					<p class="other-features">Other Features{L_COLON}</p>
+					<p class="other-features"><strong>Other Features{L_COLON}</strong></p>
 					<!-- IF S_PROFILE_C_FEATURES -->
 						<p>{{ PROFILE_C_FEATURES_VALUE|replace({'<br /><br />': '</p><p>'}) }}</p>
 					<!-- ELSE -->
