Update display of mobile versus desktop for map page

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_base.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_base.scss
@@ -114,6 +114,10 @@ a.anchor {
 	display: block;
 }
 
+.mobile-content {
+	display: none;
+}
+
 /* Remove List Style
 ========================================================================== */
 
