--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
@@ -1155,6 +1155,12 @@
 		max-width: none;
 		padding-left: 20px;
 	}
+	.desktop-content {
+		display: none;
+	}
+	.mobile-content {
+		display: block;
+	}
 
 	// form-fields.scss
 	.button, .button1, .button2 {
@@ -1409,6 +1415,9 @@
 				}
 			}
 		}
+	}
+	.section-page-map #tabs {
+		display: none;
 	}
 
 	// cp.scss
