--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_footer.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_footer.scss
@@ -101,21 +101,18 @@
 .scroll-to-top, .scroll-to-bottom {
 	display: block;
 	@include position($type: fixed, $right: 20px, $z: -1);
-	opacity: 0;
-	visibility: hidden;
+	@include toggle-content(hide);
 	@include sizing(40px, 40px);
 	border-radius: 3px;
 	background: $color-10;
 	padding: 10px;
 	text-align: center;
-	@include transition(opacity 0.5s ease);
 	&, &:hover {
 		color: $color-01;
 	}
 	&.scroll-to-visible {
 		z-index: 1;
-		opacity: 1;
-		visibility: visible;
+		@include toggle-content(show, $transition: true);
 	}
 }
 
