--- a/khyeras/styles/khyeras_v1/template/pages_map.html
+++ b/khyeras/styles/khyeras_v1/template/pages_map.html
@@ -5,19 +5,19 @@
 <div id="tabs" class="tabs map-tabs sub-panels" role="tablist">
 	<ul>
 		<li class="tab">
-			<a data-tabname="map-places-panel" role="tab" aria-controls="map-places-panel">Places</a>
+			<a data-tabname="map-places-panel">Places</a>
 		</li>
 		<li class="tab">
-			<a data-tabname="map-perimeters-panel" role="tab" aria-controls="map-perimeters-panel">Perimeters</a>
-		</li>		
-		<li class="tab">
-			<a data-tabname="map-borders-panel" role="tab" aria-controls="map-borders-panel">Borders</a>
+			<a data-tabname="map-perimeters-panel">Perimeters</a>
 		</li>
 		<li class="tab">
-			<a data-tabname="map-grid-large-panel" role="tab" aria-controls="map-grid-large-panel">Large Grid</a>
+			<a data-tabname="map-borders-panel">Borders</a>
 		</li>
 		<li class="tab">
-			<a data-tabname="map-grid-small-panel" role="tab" aria-controls="map-grid-small-panel">Small Grid</a>
+			<a data-tabname="map-grid-large-panel">Large Grid</a>
+		</li>
+		<li class="tab">
+			<a data-tabname="map-grid-small-panel">Small Grid</a>
 		</li>
 	</ul>
 </div>
