--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_base.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_base.scss
@@ -82,14 +82,16 @@ blockquote {
 }
 
 hr {
-	margin: 20px 0;
-	@include sizing(100%, 0);
+	margin: 0 0 20px 0;
+	height: 0;
 	border: 0;
 	border-bottom: 1px solid $color-04;
-	clear: both;
 	display: none;
 	&.dashed {
 		border-bottom-style: dashed;
+	}
+	&.clear {
+		clear: both;
 	}
 }
 
