Add content for more races pages

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
@@ -827,6 +827,9 @@
 			&[src*='human'] {
 				top: 0;
 			}
+			&[src*='shapeshifter'] {
+				@include position($top: 0, $bottom: 0);
+			}
 		}
 	}
 	.excerpt, .excerpt-simple {
