Add styles and code for half-breed page

--- a/khyeras/_dev/styles/khyeras_v1/template/navbar_header.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/navbar_header.html
@@ -70,6 +70,9 @@
 						<a href="{ROOT_PATH}races" title="Races" role="menuitem"><span>Races</span></a>
 					</li>
 					<li>
+						<a href="{ROOT_PATH}races-half-breed" title="Half-Breed" role="menuitem"><span>Half-Breed</span></a>
+					</li>
+					<li>
 						<a href="{ROOT_PATH}religion" title="Religion" role="menuitem"><span>Religion</span></a>
 					</li>
 				</ul>
