--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_base.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_base.scss
@@ -34,6 +34,12 @@ h1, h2, h3, h4, h5, h6, p, figure, pre, code, dl {
 ul, ol {
 	padding: 0;
 	margin: 0 0 20px 40px;
+	&.mar-20 li {
+		margin: 0 0 20px 0;
+		&:last-child {
+			margin-bottom: 0;
+		}
+	}
 }
 dt, dd {
 	margin: 0;
