--- a/khyeras/_dev/styles/khyeras_v1/template/overall_header.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/overall_header.html
@@ -139,15 +139,47 @@
 						<!-- DEFINE $MICRODATA = ' itemtype="http://data-vocabulary.org/Breadcrumb" itemscope=""' -->
 						<!-- EVENT overall_header_breadcrumbs_before -->
 						<!-- IF U_SITE_HOME -->
-							<li class="crumb home" {$MICRODATA}><a href="{U_SITE_HOME}" itemprop="url" data-navbar-reference="home"><i class="icon rpg-icon rpg-castle" aria-hidden="true"></i><span itemprop="title">{L_SITE_HOME}</span></a></li>
+							<li class="crumb home" {$MICRODATA}>
+								<a href="{U_SITE_HOME}" itemprop="url" data-navbar-reference="home">
+									<i class="icon rpg-icon rpg-castle" aria-hidden="true"></i>
+									<span itemprop="title">{L_SITE_HOME}</span>
+								</a>
+							</li>
 						<!-- ENDIF -->
 						<!-- EVENT overall_header_breadcrumb_prepend -->
 							<!-- IF not U_SITE_HOME -->
-								<li class="crumb home" {$MICRODATA}><a href="{U_INDEX}" itemprop="url" accesskey="h" data-navbar-reference="index"><i class="icon rpg-icon rpg-castle"></i><span itemprop="title">{L_INDEX}</span></a></li>
+								<li class="crumb home" {$MICRODATA}>
+									<a href="{U_INDEX}" itemprop="url" accesskey="h" data-navbar-reference="index">
+										<i class="icon rpg-icon rpg-castle"></i>
+										<span itemprop="title">{L_INDEX}</span>
+									</a>
+								</li>
 							<!-- ENDIF -->
+							{% if 'app/races-' in SCRIPT_NAME || 'app/setting-' in SCRIPT_NAME %}
+								{% if 'app/races-' in SCRIPT_NAME %}
+									{% set breadcrumb_id = 'Races' %}
+								{% elseif 'app/setting-' in SCRIPT_NAME %}
+									{% set breadcrumb_id = 'Setting' %}
+								{% endif %}
+								<li class="crumb" {$MICRODATA}<!-- IF navlinks.MICRODATA --> {navlinks.MICRODATA}<!-- ENDIF -->>
+									<i class="icon fa-chevron-right fa-fw"></i>
+									<a href="{ROOT_PATH}{{ breadcrumb_id | lower }}" itemprop="url">
+										<span itemprop="title">{{ breadcrumb_id }}</span>
+									</a>
+								</li>
+							{% endif %}
 						<!-- BEGIN navlinks -->
+							{% set breadcrumb_url = navlinks.U_VIEW_FORUM %}
+							{% if 'app' in SCRIPT_NAME %}
+								{% set breadcrumb_url = navlinks.U_VIEW_FORUM | replace({'app.php/': ''}) %}
+							{% endif %}
 							<!-- EVENT overall_header_navlink_prepend -->
-							<li class="crumb" {$MICRODATA}<!-- IF navlinks.MICRODATA --> {navlinks.MICRODATA}<!-- ENDIF -->><i class="icon fa-chevron-right fa-fw"></i><a href="{navlinks.U_VIEW_FORUM}" itemprop="url"><span itemprop="title">{navlinks.FORUM_NAME}</span></a></li>
+							<li class="crumb" {$MICRODATA}<!-- IF navlinks.MICRODATA --> {navlinks.MICRODATA}<!-- ENDIF -->>
+								<i class="icon fa-chevron-right fa-fw"></i>
+								<a href="{{ breadcrumb_url }}" itemprop="url">
+									<span itemprop="title">{navlinks.FORUM_NAME}</span>
+								</a>
+							</li>
 							<!-- EVENT overall_header_navlink_append -->
 						<!-- END navlinks -->
 						<!-- EVENT overall_header_breadcrumb_append -->
