--- a/khyeras/styles/khyeras_v1/template/overall_header.html
+++ b/khyeras/styles/khyeras_v1/template/overall_header.html
@@ -155,11 +155,13 @@
 									</a>
 								</li>
 							<!-- ENDIF -->
-							{% if 'app/races-' in SCRIPT_NAME || 'app/setting-' in SCRIPT_NAME %}
+							{% if 'app/races-' in SCRIPT_NAME || 'app/setting-' in SCRIPT_NAME || 'app/religion-' in SCRIPT_NAME %}
 								{% if 'app/races-' in SCRIPT_NAME %}
 									{% set breadcrumb_id = 'Races' %}
 								{% elseif 'app/setting-' in SCRIPT_NAME %}
 									{% set breadcrumb_id = 'Setting' %}
+								{% elseif 'app/religion-' in SCRIPT_NAME %}
+									{% set breadcrumb_id = 'Religion' %}
 								{% endif %}
 								<li class="crumb" {$MICRODATA}<!-- IF navlinks.MICRODATA --> {navlinks.MICRODATA}<!-- ENDIF -->>
 									<i class="icon fa-chevron-right fa-fw"></i>
