--- a/khyeras/_dev/styles/khyeras_v1/template/overall_header.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/overall_header.html
@@ -155,21 +155,7 @@
 									</a>
 								</li>
 							<!-- ENDIF -->
-							{% if 'app/races-' in SCRIPT_NAME || 'app/setting-' in SCRIPT_NAME || 'app/religion-' in SCRIPT_NAME %}
-								{% if 'app/races-' in SCRIPT_NAME %}
-									{% set breadcrumb_id = 'Races' %}
-								{% elseif 'app/setting-' in SCRIPT_NAME %}
-									{% set breadcrumb_id = 'Setting' %}
-								{% elseif 'app/religion-' in SCRIPT_NAME %}
-									{% set breadcrumb_id = 'Religion' %}
-								{% endif %}
-								<li class="crumb" {$MICRODATA}<!-- IF navlinks.MICRODATA --> {navlinks.MICRODATA}<!-- ENDIF -->>
-									<i class="icon fa-chevron-right fa-fw"></i>
-									<a href="{ROOT_PATH}{{ breadcrumb_id | lower }}" itemprop="url">
-										<span itemprop="title">{{ breadcrumb_id }}</span>
-									</a>
-								</li>
-							{% endif %}
+							<!-- INCLUDE custom/extra_breadcrumbs.html -->
 						<!-- BEGIN navlinks -->
 							{% set breadcrumb_url = navlinks.U_VIEW_FORUM %}
 							{% if 'app' in SCRIPT_NAME %}
