--- a/khyeras/styles/khyeras_v1/template/navbar_header.html
+++ b/khyeras/styles/khyeras_v1/template/navbar_header.html
@@ -99,18 +99,22 @@
 			</div>
 		</li>
 		<li class="dropdown-container">
-			<a href="#" title="Community" role="menuitem"><span>Community</span></a>
+			<!-- DEFINE $COMMUNITY_HEADER -->
+				<a title="Community" role="menuitem"><span>Community</span></a>
+			<!-- ENDDEFINE -->
+			<!-- IF not S_IS_BOT and (S_DISPLAY_MEMBERLIST or U_TEAM) -->
+				<!-- IF S_DISPLAY_MEMBERLIST -->
+					<a href="{U_MEMBERLIST}" title="{L_MEMBERLIST}" role="menuitem"><span>{L_MEMBERLIST}</span></a>
+				<!-- ELSE -->
+						{$COMMUNITY_HEADER}
+				<!-- ENDIF -->
+			<!-- ELSE -->
+				{$COMMUNITY_HEADER}
+			<!-- ENDIF -->
 			<i class="icon icon-lg fa-chevron-down dropdown-trigger"></i>
 			<div class="dropdown">
 				<ul class="dropdown-contents" role="menu">
 					<!-- EVENT navbar_header_quick_links_before -->
-					<!-- IF not S_IS_BOT and (S_DISPLAY_MEMBERLIST or U_TEAM) -->
-						<!-- IF S_DISPLAY_MEMBERLIST -->
-							<li>
-								<a href="{U_MEMBERLIST}" title="{L_MEMBERLIST}" role="menuitem"><span>{L_MEMBERLIST}</span></a>
-							</li>
-						<!-- ENDIF -->
-					<!-- ENDIF -->
 					<!-- IF S_DISPLAY_SEARCH -->
 						<!-- IF S_REGISTERED_USER -->
 							<li>
