--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
@@ -34,6 +34,9 @@ $color-15: #5e6c85; // blue gray
 $color-16: #591818; // red
 $color-17: #266296; // blue
 $color-18: #962626; // red
+$color-19: #ad7337; // orange
+$color-20: #ae973f; // yellow
+$color-21: #4d2e56; // purple
 
 /* Fonts
 ========================================================================== */
@@ -59,5 +62,6 @@ $ffs: 5px;
 $ffs-minus: (20 - $ffs);
 $ffs-half: ($ffs / 2);
 $list-icon-size: 42px;
+$list-icon-lg-size: 62px;
 $main-margin: 30px;
 $mobile-menu-width: 300px;
