--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
@@ -364,7 +364,7 @@
 	}
 	.flex-row {
 		align-items: center;
-		margin: 0 0 20px 0;
+		margin-bottom: 20px;
 		.flex-column {
 			margin: 0 0 10px 0;
 			a {
